# texas_holdem

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
backend/texas_holdem_trainer/ai/: profiles.py  providers.py  service.py
backend/texas_holdem_trainer/api/: app.py  schemas.py
backend/texas_holdem_trainer/domain/: actions.py  cards.py  engine.py  evaluator.py  state.py
backend/texas_holdem_trainer/runtime/: config.py  table_manager.py
config/: ai_players.example.yaml  ai_players.yaml
docs/: usage.md
docs/superpowers/plans/: 2026-05-24-texas-holdem-trainer-implementation.md
docs/superpowers/specs/: 2026-05-24-texas-holdem-trainer-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  labels.ts  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ActionControls.tsx  CoachPanel.tsx  CommunityCards.tsx  HandHistoryPanel.tsx  PlayerSeat.tsx  PokerTable.tsx  PokerTableLayout.test.ts  PokerTableLayout.ts  SettingsPanel.tsx
scripts/: dev.sh
tests/: test_dev_script.py  test_package_import.py
tests/ai/: test_ai_decisions.py
tests/api/: test_table_api.py
tests/domain/: test_action_validation.py  test_cards_and_state.py  test_engine_flow.py  test_evaluator.py
tests/runtime/: test_config.py
