[project]
name = "texas-holdem-trainer"
version = "0.1.0"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
